k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: runner-lb
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "websocket-config"}'
spec:
  selector:
    app: runner
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
