k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloudflare
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "cloudflare-ip"
spec:
  tls:
    - hosts:
        - runner.palcode.dev
      secretName: cloudflare-runner-origin
    - hosts:
        - lsp.palcode.dev
      secretName: lsp-origin
  rules:
    - host: runner.palcode.dev
      http:
        paths:
          - path: /*
            backend:
              serviceName: runner-lb
              servicePort: 80
    - host: lsp.palcode.dev
      http:
        paths:
          - path: /*
            backend:
              serviceName: lsp-lb
              servicePort: 80
